client/src/components/layout/Navbar/Navbar.module.css
.navbar {
  height: 90px;
  border-bottom: 1px solid var(--light-blue);
  background-color: var(--white);
}

.navbar, .titleContainer, .wrapper {
  display: flex;
  align-items: center;
}

.wrapper {
  height: 100%;
}

.title {
  font-weight: 800;
  margin: 0 15px;
}

.titleContainer {
  height: 100%;
  padding-right: 30px;
  border-right: 1px solid var(--light-blue);
  width: 250px;
  min-width: 250px;
}

.utilityBar {
  padding-left: 30px;
  display: flex;
  justify-content: space-between;
  width: 100%;
  align-items: center;
}

.buttonsWrapper {
  display: flex;
  align-items: center;
}

